--- a/mysheet.css
+++ b/mysheet.css
@@ -56,8 +56,8 @@ div.pic {
 	
 	height: 15%;
 	margin-bottom: 25px;
-	margin-right:15px;
-	margin-left: 780px;
+	margin-right:50%;
+	margin-left: 50%;
 
 	float: middle;
 	float; center;
